# TrafficSimulator

./: .gitignore  CMakeLists.txt  ReadMe.txt  Readme.txt  RunMe.sh  main.cpp
Components/: Component.cpp  Component.h  ComponentUtility.cpp  ComponentUtility.h  Movement.cpp  Movement.h  NameComponent.cpp  NameComponent.h  Node.cpp  Node.h  Path.cpp  Path.h  Position.cpp  Position.h  Render.cpp  Render.h  RoadGraph.cpp  RoadGraph.h  SpeedAndAcceleration.cpp  SpeedAndAcceleration.h  TestComponent1.cpp  TestComponent1.h  TestComponent2.cpp  TestComponent2.h  TrafficLight.cpp  TrafficLight.h  Transform.cpp  Transform.h  Velocity.cpp  Velocity.h
Entities/: Entity.cpp  Entity.h
Help/: Visitors.cpp  Visitors.h
Helpers/: Color.cpp  Color.h  Roads.cpp  Roads.h  Visitor.h
Managers/: EntityManager.cpp  EntityManager.h  World.cpp  World.h
Systems/: Drive.cpp  Drive.h  Logger.cpp  Logger.h  Move.cpp  Move.h  Render.cpp  Render.h  System.cpp  System.h  TrafficGeneration.cpp  TrafficGeneration.h  TrafficLight.cpp  TrafficLight.h  TrafficLightControl.cpp  TrafficLightControl.h  VehicleCollisionPrevention.cpp  VehicleCollisionPrevention.h
